src/objects/PIN__c.object
<CustomObject>
    <fields>
        <fullName>Adjusted_End_Date__c</fullName>
        <label>Adjusted End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Brand__c</fullName>
        <formula>TEXT(Campaign__r.Campaign_Brand__c)</formula>
        <label>Campaign Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <formula>Campaign__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <formula>Campaign__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>PIN</relationshipLabel>
        <relationshipName>PIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Company__c</fullName>
        <formula>Customer__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PIN</relationshipLabel>
        <relationshipName>PIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <formula>Dealer__r.Dealer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PIN</relationshipLabel>
        <relationshipName>PIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Group__c</fullName>
        <formula>VIN_Serial_Number__r.Product__r.Model_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Year__c</fullName>
        <formula>VIN_Serial_Number__r.Product__r.Model_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIN_Expiry__c</fullName>
        <formula>IF( ISNULL(Adjusted_End_Date__c), Campaign_End_Date__c, Adjusted_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PIN Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pin Code</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Redeemed_Date__c</fullName>
        <description>The date of when the status is &quot;Redeemed&quot;</description>
        <label>Redeemed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeemed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expired</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIN</label>
        <referenceTo>VIN__c</referenceTo>
        <relationshipLabel>PIN</relationshipLabel>
        <relationshipName>PIN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN_Serial__c</fullName>
        <formula>VIN_Serial_Number__r.ProductSerialNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN/Serial #</label>
        <type>Text</type>
    </fields>
    <label>PIN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Pin_Code__c</columns>
        <columns>Campaign__c</columns>
        <columns>Status__c</columns>
        <columns>Dealer__c</columns>
        <columns>PIN_Expiry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PIN Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>